--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,25 @@
 
     <link rel="stylesheet" href="/styles/styles.css" type="text/css" />
 </head>
-<body ng-controller="homeController">
+<body ng-controller="homeController" class="homePage">
 
-    <h1> {{title}}</h1>
+    <h1> {{title}} </h1>
+
+    <div>
+        Using the given application skeleton, implement a CRUD functionality using Spring, AngularJS and MySQL.
+        <br/><br/>
+        The application should have:
+        <ul>
+            <li>A login page</li>
+            <li>At least two types of users</li>
+        </ul>
+    </div>
+
+    <br/><br/>
+
+    <div>
+        You should create a <b>separate branch</b> from master, where you will push your work.
+    </div>
 
 <script src="/scripts/angular.min.js"></script>
 <script src="/js/module.js"></script>
