--- a/src/main/resources/templates/FirstPage.html
+++ b/src/main/resources/templates/FirstPage.html
@@ -3,8 +3,11 @@
 <head>
 	<title>FirstPage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" type="text/css" href="/styles/FirstPage.css" />
     <script type="text/javascript" src="/js/FirstPage.js"></script>
+
 </head>
 
 <body ng-controller="firstpageController">
@@ -13,21 +16,83 @@
 		<a href="javascript:void(0)" class="btn" onclick="closeMenu()">&#9754;</a>
 		<a href="http://localhost:8090/profilepage">Profile Page</a>
         <a href="http://localhost:8090/firstpage">Dashboard</a>
-		<a href="#">Cart</a>
+		<a href="http://localhost:8090/cart">Cart</a>
 		<a href="#">About</a>
 		<a href="http://localhost:8090/home">Logout</a>
 	</div>
 
+
 	<div id="int">
-		<span style="font-size:30px;cursor:pointer" onclick="openMenu()">&#9776; </span>
-        <h1>{{ title }}</h1>
+
+
+        <div id="hdrs">
+            <span class = "hdr" style="font-size:30px;cursor:pointer" onclick="openMenu()">&#9776; </span>
+            <h1 style="text-align: center; " class="hdr">{{ title }}</h1>
+            <button style="float: right; margin-top: 30px; margin-right: 50px;" type="button" class="btn btn-success btn-sm" ng-click="cart()">
+                <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
+            </button>
+            <input style="float: right; margin-top: 30px;" class="form-control, hdr" id="Input" type="text" placeholder="Search..." ng-model = "srch" ng-change="search()"/>
+        </div>
+
+        <div data-toggle="tooltip" data-placement="top" title="See more">
+
+            <div data-toggle="modal" data-target="#myModal"  id="open" ng-click="modal(movie)" ng-repeat="movie in movies" ng-if ="movie.disp">
+                <img ng-src="/images/{{ movie.photo }}" width="200px" height="300px"/>
+                <div>{{ movie.movieName }}</div>
+                <div id="dir">{{ movie.director }}</div>
+            </div>
+
+        </div>
+
+
 	</div>
+
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog modal-lg" >
+
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">{{ selectedMovie.movieName}}</h4>
+                </div>
+
+                <div class="modal-body" id = "mbdy">
+
+                    <div class= "dv">
+                        <img ng-src="/images/{{ selectedMovie.photo }}" width="200px" height="300px"/>
+                    </div>
+
+                    <div class = "dv" style="height: 300px; width: 350px;">
+                        <h4><span class="label label-success">Price: {{selectedMovie.price}}</span></h4>
+                        <h3>Summary:</h3>
+                        <p>{{selectedMovie.description}}</p>
+                        <h4><span class="label label-danger">Genre: {{selectedMovie.genre}}</span></h4>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-success" ng-click="addCart(selectedMovie)">Add to cart</button>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 
 	<script src="/scripts/angular.min.js"></script>
 	<script src="/js/module.js"></script>
 
 	<script src="/js/firstpage.controller.js"></script>
 	<script src="/js/firstpage.service.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script>
+
+    </script>
+
 
 </body>
 </html>
